# pybind11_weaver

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  build.sh  pyproject.toml  requirements.txt
pybind11_weaver/: __init__.py  config.py  entity.py  entity_base.py  entity_tree.py  gen_code.py  gen_unit.py  gu_loader.py  main.py
pybind11_weaver/entity/: __init__.py  entity_base.py  enum.py  funktion.py  klass.py  namespace.py
pybind11_weaver/entity/klass/: __init__.py  field.py  klass.py  method.py  trampoline.py
pybind11_weaver/include/pybind11_weaver/: pybind11_weaver.h
pybind11_weaver/utils/: common.py  fn.py  scope_list.py
sample/: CMakeLists.txt
sample/all_feature/: CMakeLists.txt  _binding.cc.inc  binding.cc  cfg.yaml  generate.sh  sample.cc  sample.h  sample_binding.cc.inc  template_pb11_weaver_helper.h
sample/all_feature/c_lib/: CMakeLists.txt  c_lib.cc  c_lib.h  not_exported.h
sample/config/: all_with_doc.yaml
sample/enum/: binding.cc  cfg.yaml  sample.cc.inc  sample.h
samples/config/: all_with_doc.yaml
test/: CMakeLists.txt  gen_unit_test.py  gu_loader_test.py
test/config/: config_with_doc.yaml  test_config.py
test/cpp_header_test/: CMakeLists.txt  module.cpp
test/sample/all_feature/: CMakeLists.txt  test_all_feature.py
test/sample_test/: CMakeLists.txt  launch_module.py  module.cpp
